--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet.pm@0.25.0/dist/leaflet.pm.css" />
-  <!--
+	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -40,6 +40,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+	<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+	 crossorigin="">
+
+	</script>
+	<script src="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.min.js">
+
+	</script>
+	<script src="https://unpkg.com/leaflet-path-drag@1.1.0/dist/L.Path.Drag.js">
+
+	</script>
+	<script src="https://unpkg.com/leaflet-path-transform@1.1.1/dist/L.Path.Transform.js">
+
+	</script>
 </body>
 
 </html>
